--- a/src/css/chart.css
+++ b/src/css/chart.css
@@ -27,12 +27,6 @@
 }
 
 .meta .title {
-	display: block;
-	/*font-size: 2em;*/
-	line-height: 2em;
-	padding: 0 10px;
-	/*background-color: #474747;*/
-	/*color: #ffffff;*/
-	font-size: 1.5em;
-	color: #474747;
+	font-size: 2em;
+	fill: #474747;
 }
