--- a/src/css/media-queries.css
+++ b/src/css/media-queries.css
@@ -2,9 +2,4 @@
 /* MEDIA QUERIES */
 
 /* 960 px */
-@media screen and (max-width: 960px) {
-	.meta .title {
-		font-size: 1.6em;
-		line-height: 2.25em;
-	}
-}
+@media screen and (max-width: 960px) {}
